--- a/website-ecommerce/tsconfig.json
+++ b/website-ecommerce/tsconfig.json
@@ -22,6 +22,6 @@
       "@/*": ["./src/*"]
     }
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts", "src/app/auth/nextauth.js", "src/app/categories/[catergoriesName]/products/page.tsc"],
   "exclude": ["node_modules"]
 }
