--- a/website-ecommerce/package.json
+++ b/website-ecommerce/package.json
@@ -9,6 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@adyen/adyen-web": "^6.11.0",
+    "@adyen/api-library": "^26.1.0",
+    "@paypal/react-paypal-js": "^8.8.2",
     "@prisma/client": "^6.5.0",
     "@types/uuid": "^10.0.0",
     "bcryptjs": "^3.0.2",
@@ -17,6 +20,7 @@
     "prisma": "^6.5.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-fast-marquee": "^1.6.5",
     "uuid": "^11.1.0"
   },
   "devDependencies": {
