--- a/website-ecommerce/package.json
+++ b/website-ecommerce/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@adyen/adyen-web": "^6.11.0",
     "@adyen/api-library": "^26.1.0",
+    "@mollie/api-client": "^4.3.0",
     "@paypal/react-paypal-js": "^8.8.2",
     "@prisma/client": "^6.5.0",
     "@types/uuid": "^10.0.0",
