--- a/website-ecommerce/package.json
+++ b/website-ecommerce/package.json
@@ -15,9 +15,11 @@
     "@paypal/react-paypal-js": "^8.8.2",
     "@prisma/client": "^6.5.0",
     "@types/uuid": "^10.0.0",
+    "axios": "^1.8.4",
     "bcryptjs": "^3.0.2",
     "next": "^15.2.2",
     "next-auth": "^4.24.11",
+    "nodemailer": "^6.10.0",
     "prisma": "^6.5.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
@@ -27,6 +29,7 @@
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
+    "@types/nodemailer": "^6.4.17",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "9.24.0",
