--- a/website-ecommerce/package.json
+++ b/website-ecommerce/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev --turbopack",
+    "setup:minio": "node scripts/setup-minio.mjs",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
@@ -11,12 +12,16 @@
   "dependencies": {
     "@adyen/adyen-web": "^6.11.0",
     "@adyen/api-library": "^26.1.0",
+    "@anthropic-ai/claude-code": "^1.0.96",
+    "@aws-sdk/client-s3": "^3.879.0",
+    "@aws-sdk/s3-request-presigner": "^3.879.0",
     "@mollie/api-client": "^4.3.0",
     "@paypal/react-paypal-js": "^8.8.2",
     "@prisma/client": "^6.5.0",
     "@types/uuid": "^10.0.0",
     "axios": "^1.8.4",
     "bcryptjs": "^3.0.2",
+    "formidable": "^3.5.4",
     "next": "^15.2.2",
     "next-auth": "^4.24.11",
     "nodemailer": "^6.10.0",
@@ -24,7 +29,8 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-fast-marquee": "^1.6.5",
-    "uuid": "^11.1.0"
+    "uuid": "^11.1.0",
+    "zod": "^4.1.3"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
